--- a/404.html
+++ b/404.html
@@ -9,4 +9,5 @@ layout: default
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   <span>Sorry, but the page you were trying to view does not exist.</span>
+  <iframe width="50%" height="315" src="https://www.youtube.com/embed/zprCVgMKXT0" frameborder="0" allowfullscreen></iframe>
 </div>
